# claude-overlay

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/artifacts/: INDEX.md
.claude/artifacts/001-overusage-and-opacity/: PLAN.md
.claude/artifacts/002-overusage-refinements-and-context-menu/: PLAN.md
.claude/artifacts/003-quota-bar-exclusion-and-overusage-data/: PLAN.md
.claude/artifacts/004-macos-port/: PLAN.md
.github/: release.yml
.github/workflows/: ci.yml  release-macos.yml  release-windows.yml  release.yml
.shared/plans/: overlay-plan.md  refresh-responsiveness-fix.md
icons/: PLACEHOLDER.txt
screenshots/: README.md
scripts/: release.mjs
src/: countdown.ts  index.html  main.ts  store.ts  styles.css  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  credential_source.rs  fallback_logs.rs  lib.rs  main.rs  model.rs  plan_detector.rs  poller.rs  sessions.rs  settings.rs  telemetry.rs  usage_client.rs  window_ctl.rs
src/components/: context-menu.ts  overusage-section.ts  sessions-panel.ts  settings-panel.ts  usage-card.ts  version-label.ts  window-bar.ts
