[package]
name = "claude-overlay"
version = "0.5.0"
description = "Always-on-top Claude usage overlay"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_overlay_lib"
crate-type = ["rlib"]

[[bin]]
name = "claude-overlay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wtsapi32", "sysinfoapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
